[gd_scene load_steps=12 format=2]

[ext_resource path="res://Props/Prop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Props/altar.png" type="Texture" id=2]
[ext_resource path="res://Props/livro.png" type="Texture" id=3]
[ext_resource path="res://World/light.png" type="Texture" id=4]
[ext_resource path="res://Props/Book.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Animate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.984314, 0.12549, 0.0392157, 0 ), Color( 0.984314, 0.12549, 0.0392157, 1 ), Color( 0.984314, 0.12549, 0.0392157, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.984314, 0.12549, 0.0392157, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 6 )

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14, 6 )

[node name="Book" instance=ExtResource( 1 )]
collision_layer = 2
script = ExtResource( 5 )

[node name="light" type="Sprite" parent="." index="0"]
modulate = Color( 0, 0, 0, 0.952941 )
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0.459311, 10.9739 )
scale = Vector2( 0.174745, 0.0513653 )
texture = ExtResource( 4 )

[node name="Sprite" parent="." index="1"]
light_mask = 2
position = Vector2( 9.53674e-07, 9.53674e-07 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="Book2" type="Sprite" parent="Sprite" index="0"]
modulate = Color( 0.984314, 0.12549, 0.0392157, 0 )
position = Vector2( -0.206139, -17.9072 )
scale = Vector2( 0.658912, 0.672185 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/Book2" index="0"]
anims/Animate = SubResource( 1 )
anims/Idle = SubResource( 2 )

[node name="Book" type="Sprite" parent="Sprite" index="1"]
position = Vector2( -0.25, -17.75 )
scale = Vector2( 0.609375, 0.609375 )
texture = ExtResource( 3 )

[node name="Collision" parent="." index="2"]
position = Vector2( 0, 5 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="." index="3"]
position = Vector2( -4, 0 )
texture = ExtResource( 4 )
texture_scale = 0.05
color = Color( 1, 0.0156863, 0.0156863, 1 )
energy = 0.0
range_item_cull_mask = -2147483646

[node name="AnimationPlayer" type="AnimationPlayer" parent="Light2D" index="0"]
autoplay = "Animate"
anims/Animate = SubResource( 4 )

[node name="Light2D2" type="Light2D" parent="." index="4"]
position = Vector2( 4, 0 )
texture = ExtResource( 4 )
texture_scale = 0.05
color = Color( 1, 0.0156863, 0.0156863, 1 )
energy = 0.0
range_item_cull_mask = -2147483646

[node name="AnimationPlayer" type="AnimationPlayer" parent="Light2D2" index="0"]
autoplay = "Animate"
anims/Animate = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="." index="5"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 0, 11 )
shape = SubResource( 6 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
